--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
         android:theme="@style/Theme.Exo4"
         tools:targetApi="31">
         <activity
+            android:name=".ResultActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ZoneDeTirActivity"
+            android:exported="false" />
+        <activity
             android:name=".HistoryActivity"
             android:exported="false" />
         <activity
@@ -28,7 +34,7 @@
             android:name=".ShootingActivity"
             android:exported="false" />
         <activity
-            android:name=".CourrirActivity"
+            android:name=".CourirActivity"
             android:exported="false" /> <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
